--- a/js-basics_dark-mode/css/styles.css
+++ b/js-basics_dark-mode/css/styles.css
@@ -16,8 +16,7 @@ body {
   background-color: #bac4c9;
   transition: 0.4s ease;
 }
-
-body.dark {
+.dark {
   background-color: rgb(50, 51, 58);
   color: white;
 }
