--- a/css-responsive_playground/css/styles.css
+++ b/css-responsive_playground/css/styles.css
@@ -62,7 +62,7 @@ h1 {
 .box--one {
   background-color: lightblue;
 
-  width: 100px;
+  width: 50%;
   height: 100px;
 }
 
@@ -73,11 +73,29 @@ h1 {
   height: 100px;
 }
 
+@media (min-width: 600px) {
+  .box--two {
+    width: 200px;
+  }
+}
+@media (min-width: 1200px) {
+  .box--two {
+    width: 400px;
+  }
+}
+
 .box--three {
   background-color: lightpink;
 
   width: 50px;
   height: 250px;
+}
+
+@media (orientation: landscape) {
+  .box--three {
+    width: 250px;
+    height: 50px;
+  }
 }
 
 .box--four {
@@ -87,6 +105,11 @@ h1 {
   height: 100px;
 }
 
+@media (prefers-color-scheme: dark) {
+  .box--four {
+    background: darkslategray;
+  }
+}
 .box--five {
   width: 100%;
 }
